--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular-bootstrap": "~0.12.1"
+    "angular-bootstrap": "~0.12.1",
+    "angular-validation": "~1.3.0"
   }
 }
