--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -16,6 +16,8 @@
   ],
   "dependencies": {
     "angular-bootstrap": "~0.12.1",
-    "angular-validation": "~1.3.0"
+    "angular-validation": "~1.3.0",
+    "highcharts-ng": "~0.0.8",
+    "highcharts": "~4.1.4"
   }
 }
