--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -18,6 +18,10 @@
     "angular-bootstrap": "~0.12.1",
     "angular-validation": "~1.3.0",
     "highcharts-ng": "~0.0.8",
-    "highcharts": "~4.1.4"
+    "highcharts": "~4.1.4",
+    "js-data-angular": "~2.2.3",
+    "js-data": "~1.5.11",
+    "localforage": "~1.2.2",
+    "js-data-localforage": "~1.0.0"
   }
 }
