--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "materialscommons",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server-test": "./node_modules/.bin/_mocha -- -R spec -r should backend/server"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bluebird": "^2.9.14",
-    "busmq": "^0.8.7",
-    "hiredis": "^0.2.0",
-    "js-data": "^1.5.11",
-    "js-data-rethinkdb": "^1.1.2",
-    "koa": "^0.18.1",
-    "koa-mount": "^1.3.0",
-    "koa-qs": "^2.0.0",
-    "koa-resource-router": "^0.4.0",
-    "koa-router": "^4.2.0",
-    "mime": "^1.3.4",
-    "rethinkdbdash": "^1.16.13"
-  },
-  "devDependencies": {
-    "gulp": "^3.8.11",
-    "gulp-clean": "^0.3.1",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-minify-html": "^1.0.1",
-    "gulp-ngmin": "^0.3.0",
-    "gulp-rev": "^3.0.1",
-    "gulp-sequence": "^0.3.2",
-    "gulp-uglify": "^1.1.0",
-    "gulp-usemin": "^0.3.11",
-    "istanbul": "^0.3.10",
-    "mocha": "^2.2.1",
-    "should": "^5.2.0"
-  }
+    "name": "materialscommons",
+    "version": "1.0.0",
+    "description": "",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "server-test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -R spec -r should backend/server"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bluebird": "^2.9.14",
+        "busmq": "^0.8.7",
+        "hiredis": "^0.2.0",
+        "js-data": "^1.5.11",
+        "js-data-rethinkdb": "^1.1.2",
+        "koa": "^0.18.1",
+        "koa-mount": "^1.3.0",
+        "koa-qs": "^2.0.0",
+        "koa-resource-router": "^0.4.0",
+        "koa-router": "^4.2.0",
+        "mime": "^1.3.4",
+        "rethinkdbdash": "^1.16.13"
+    },
+    "devDependencies": {
+        "gulp": "^3.8.11",
+        "gulp-clean": "^0.3.1",
+        "gulp-minify-css": "^1.0.0",
+        "gulp-minify-html": "^1.0.1",
+        "gulp-ngmin": "^0.3.0",
+        "gulp-rev": "^3.0.1",
+        "gulp-sequence": "^0.3.2",
+        "gulp-uglify": "^1.1.0",
+        "gulp-usemin": "^0.3.11",
+        "istanbul": "git://github.com/gotwarlost/istanbul.git#harmony",
+        "mocha": "^2.2.1",
+        "should": "^5.2.0"
+    }
 }
