--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server-test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -R spec -r should backend/server"
+    "server-test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -R spec -r should --recursive backend/server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bluebird": "^2.9.14",
     "busmq": "^0.8.7",
+    "co": "^4.5.1",
     "hiredis": "^0.2.0",
+    "http-status": "^0.1.8",
     "js-data": "^1.5.11",
     "js-data-rethinkdb": "^1.1.2",
     "koa": "^0.18.1",
@@ -35,6 +37,7 @@
     "gulp-usemin": "^0.3.11",
     "istanbul": "git://github.com/gotwarlost/istanbul.git#harmony",
     "mocha": "^2.2.1",
-    "should": "^5.2.0"
+    "should": "^5.2.0",
+    "supertest": "^0.15.0"
   }
 }
