--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-status": "^0.1.8",
     "js-data": "^1.5.11",
     "js-data-rethinkdb": "^1.1.2",
+    "js-data-schema": "^1.0.0",
     "koa": "^0.18.1",
     "koa-mount": "^1.3.0",
     "koa-qs": "^2.0.0",
