Add resource for creating samples. Update model loader to look for MCTEST environment as another test for using mocks.

--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "bluebird": "^2.9.14",
     "busmq": "^0.8.7",
     "co": "^4.5.1",
+    "co-body": "^1.1.0",
     "hiredis": "^0.2.0",
     "http-status": "^0.1.8",
     "js-data": "^1.5.11",
     "js-data-rethinkdb": "^1.1.2",
-    "js-data-schema": "^1.0.0",
+    "js-data-schema": "^1.1.1",
     "koa": "^0.18.1",
     "koa-mount": "^1.3.0",
     "koa-qs": "^2.0.0",
     "koa-resource-router": "^0.4.0",
     "koa-router": "^4.2.0",
-    "lodash": "^3.5.0",
+    "lodash": "^3.6.0",
     "mime": "^1.3.4",
     "rethinkdbdash": "^1.16.13"
   },
