--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "koa-router": "^4.2.0",
     "lodash": "^3.6.0",
     "mime": "^1.3.4",
+    "redis": "^0.12.1",
     "rethinkdbdash": "^1.16.13"
   },
   "devDependencies": {
