--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-usemin": "^0.3.11",
     "istanbul": "git://github.com/gotwarlost/istanbul.git#harmony",
     "mocha": "^2.2.1",
+    "mocha-generators": "^1.1.1",
     "should": "^5.2.0",
     "supertest": "^0.15.0"
   }
