--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-runtime": "^5.1.5",
     "bluebird": "^2.9.14",
     "busmq": "^0.8.8",
     "co": "^4.5.1",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "gulp": "^3.8.11",
+    "gulp-babel": "^5.1.0",
     "gulp-clean": "^0.3.1",
     "gulp-minify-css": "^1.0.0",
     "gulp-minify-html": "^1.0.1",
