--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "angular-bootstrap": "~0.12.1",
-    "angular-validation": "~1.3.0"
+    "angular-validation": "~1.3.0",
+    "imagesloaded": "~3.1.8"
   }
 }
