--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -19,6 +19,7 @@
     "angular-validation": "~1.3.0",
     "highcharts-ng": "~0.0.8",
     "highcharts": "~4.1.4",
-    "imagesloaded": "~3.1.8"
+    "imagesloaded": "~3.1.8",
+    "ag-grid": "~1.7.0"
   }
 }
