--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -21,5 +21,8 @@
     "highcharts": "~4.1.4",
     "imagesloaded": "~3.1.8",
     "ag-grid": "~1.4.1"
+  },
+  "resolutions": {
+    "ag-grid": "1.8.0"
   }
 }
