Add command-line-args package. Remove reference to istanbul branch. Figure out which istanbul version to install that supports es6.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "busmq": "^0.8.8",
     "co": "^4.5.1",
     "co-body": "^1.1.0",
+    "command-line-args": "^0.5.9",
     "hiredis": "^0.2.0",
     "http-status": "^0.1.8",
     "js-data": "^1.5.11",
@@ -40,7 +41,6 @@
     "gulp-sequence": "^0.3.2",
     "gulp-uglify": "^1.1.0",
     "gulp-usemin": "^0.3.11",
-    "istanbul": "git://github.com/gotwarlost/istanbul.git#harmony",
     "mocha": "^2.2.1",
     "mocha-generators": "^1.1.1",
     "should": "^5.2.0",
