--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -22,7 +22,7 @@
     "js-data-angular": "~2.2.3",
     "js-data": "~1.5.11",
     "localforage": "~1.2.2",
-    "js-data-localforage": "~1.0.0"
+    "js-data-localforage": "~1.0.0",
     "imagesloaded": "~3.1.8",
     "ag-grid": "~1.4.1"
   },
