--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -25,7 +25,8 @@
     "js-data-localforage": "~1.0.0",
     "imagesloaded": "~3.1.8",
     "ag-grid": "~1.4.1",
-    "angular-toastr": "~1.4.1"
+    "angular-toastr": "~1.4.1",
+    "angular-google-chart": "~0.0.11"
   },
   "resolutions": {
     "ag-grid": "1.8.0"
