Update with latest paths.

--- a/website/nginx/local/mctest.localhost.conf
+++ b/website/nginx/local/mctest.localhost.conf
@@ -13,6 +13,18 @@
 		proxy_set_header Host $host;
 	}
 
+	location /api/search {
+		rewrite /api/(.*) /$1 break;
+		proxy_pass http://localhost:5012;
+		proxy_set_header Host $host;
+	}
+
+	location /api/projects2 {
+		rewrite /api/(.*) /$1 break;
+		proxy_pass http://localhost:5004;
+		proxy_set_header Host $host;
+	}
+
         location /api {
             rewrite /api/(.*)$ /$1 break;
             proxy_pass http://localhost:5002;
