added new templates - tracy

--- a/backend/scripts/templates/sem-ebsd-data-collection/data-collection-settings.json
+++ b/backend/scripts/templates/sem-ebsd-data-collection/data-collection-settings.json
@@ -45,8 +45,8 @@
             "required": false
         },
         {
-            "name": "Aquisition Time",
-            "attribute": "aquisition_time",
+            "name": "Acquisition Time",
+            "attribute": "acquisition_time",
             "type": "number",
             "unit": "",
             "unit_choice": ["s", "ms"],
