--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -26,9 +26,11 @@
     "imagesloaded": "~3.1.8",
     "ag-grid": "~1.4.1",
     "angular-toastr": "~1.4.1",
-    "angular-google-chart": "~0.0.11"
+    "angular-google-chart": "~0.0.11",
+    "angular-ui-confirm": "*"
   },
   "resolutions": {
-    "ag-grid": "1.8.0"
+    "ag-grid": "1.8.0",
+    "angular-bootstrap": "~0.12.1"
   }
 }
