--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
+    "gulp-check-unused-css": "^2.1.3",
     "gulp-clean": "^0.3.1",
     "gulp-minify-css": "^1.0.0",
     "gulp-minify-html": "^1.0.1",
