--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -24,12 +24,11 @@
     "localforage": "~1.2.2",
     "js-data-localforage": "~1.0.0",
     "imagesloaded": "~3.1.8",
-    "ag-grid": "~1.4.1",
     "angular-toastr": "~1.4.1",
-    "angular-google-chart": "~0.0.11"
+    "angular-google-chart": "~0.0.11",
+    "ag-grid": "~1.16.1"
   },
   "resolutions": {
-    "ag-grid": "1.8.0",
     "angular-bootstrap": "~0.12.1"
   }
 }
