--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -26,7 +26,13 @@
     "imagesloaded": "~3.1.8",
     "angular-toastr": "~1.4.1",
     "angular-google-chart": "~0.0.11",
-    "ag-grid": "~1.16.1"
+    "ag-grid": "~1.16.1",
+    "angular": "1.3.6",
+    "angular-sanitize": "1.3.6",
+    "angular-cookies": "1.3.6",
+    "angular-messages": "1.3.6",
+    "textAngular": "1.2.1",
+    "jquery": "1.11.3"
   },
   "resolutions": {
     "angular-bootstrap": "~0.12.1"
