--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -32,7 +32,8 @@
     "angular-cookies": "1.3.6",
     "angular-messages": "1.3.6",
     "textAngular": "1.2.1",
-    "jquery": "1.11.3"
+    "jquery": "1.11.3",
+    "restangular": "~1.5.1"
   },
   "resolutions": {
     "angular-bootstrap": "~0.12.1"
