--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -15,28 +15,19 @@
     "tests"
   ],
   "dependencies": {
-    "angular-bootstrap": "~0.12.1",
-    "angular-validation": "~1.3.0",
-    "highcharts-ng": "~0.0.8",
-    "highcharts": "~4.1.4",
-    "js-data-angular": "~2.2.3",
-    "js-data": "~1.5.11",
-    "localforage": "~1.2.2",
-    "js-data-localforage": "~1.0.0",
-    "imagesloaded": "~3.1.8",
-    "angular-toastr": "~1.4.1",
-    "angular-google-chart": "~0.0.11",
-    "ag-grid": "~1.16.1",
+    "angular-bootstrap": "0.12.1",
+    "angular-validation": "1.3.0",
+    "imagesloaded": "3.1.8",
+    "angular-toastr": "1.4.1",
+    "angular-google-chart": "0.0.11",
+    "ag-grid": "1.16.1",
     "angular": "1.3.6",
     "angular-sanitize": "1.3.6",
     "angular-cookies": "1.3.6",
     "angular-messages": "1.3.6",
     "textAngular": "1.2.1",
     "jquery": "1.11.3",
-    "restangular": "~1.5.1",
-    "font-awesome": "~4.4.0"
-  },
-  "resolutions": {
-    "angular-bootstrap": "~0.12.1"
+    "restangular": "1.5.1",
+    "font-awesome": "4.4.0"
   }
 }
