--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "koa-router": "^4.2.0",
     "lodash": "^3.6.0",
     "mime": "^1.3.4",
-    "rethinkdbdash": "^1.16.13"
+    "rethinkdbdash": "^1.16.13",
+    "socket.io": "^1.4.5"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
