--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -29,6 +29,7 @@
     "jquery": "1.11.3",
     "restangular": "1.5.1",
     "font-awesome": "4.4.0",
-    "ui-router-extras": "~0.1.0"
+    "ui-router-extras": "~0.1.0",
+    "angular-socket-io": "~0.7.0"
   }
 }
