--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -30,6 +30,7 @@
     "restangular": "1.5.1",
     "font-awesome": "4.4.0",
     "ui-router-extras": "~0.1.0",
-    "angular-socket-io": "~0.7.0"
+    "angular-socket-io": "~0.7.0",
+    "angular-ui-router": "~0.2.18"
   }
 }
