--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -16,15 +16,17 @@
   ],
   "dependencies": {
     "angular-bootstrap": "0.12.1",
-    "angular-validation": "1.3.0",
     "imagesloaded": "3.1.8",
     "angular-toastr": "1.4.1",
     "angular-google-chart": "0.0.11",
     "ag-grid": "1.16.1",
-    "angular": "1.3.6",
-    "angular-sanitize": "1.3.6",
-    "angular-cookies": "1.3.6",
-    "angular-messages": "1.3.6",
+    "angular": "1.5.0",
+    "angular-sanitize": "1.5.0",
+    "angular-messages": "1.5.0",
+    "angular-aria": "1.5.0",
+    "angular-animate": "1.5.0",
+    "angular-cookies": "1.5.0",
+    "angular-material": "1.0.5",
     "textAngular": "1.2.1",
     "jquery": "1.11.3",
     "restangular": "1.5.1",
