Convert interface to separate projects and project pages. Start moving over component into new interface.

--- a/website/app/bower.json
+++ b/website/app/bower.json
@@ -34,6 +34,7 @@
     "ui-router-extras": "~0.1.0",
     "angular-socket-io": "~0.7.0",
     "angular-ui-router": "~0.2.18",
-    "angular-drag-and-drop-lists": "~1.4.0"
+    "angular-drag-and-drop-lists": "~1.4.0",
+    "angular-material-data-table": "~0.9.11"
   }
 }
