--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-qs": "^2.0.0",
     "koa-resource-router": "^0.4.0",
     "koa-router": "^4.2.0",
+    "koa-validate": "^0.2.11",
     "lodash": "^3.6.0",
     "mime": "^1.3.4",
     "rethinkdbdash": "^1.16.13",
